campaign, session and user_campaign documentation
