# cmd/server/handler/user_campaign.go
@@ -16,6 +16,15 @@ func NewUserCampaignHandler(service *user_campaign.UserCampaignService) *UserCam
 	return &UserCampaignHandler{service: *service}
 }
 
+// user_campaign godoc
+// @Summary Create user_campaign
+// @Tags user_campaign
+// @Accept json
+// @Produce json
+// @Param body body dto.CreateUserCampaignDto true "CreateUserCampaignDto"
+// @Success 201 {object} domain.UserCampaign
+// @Failure 500 {object} error
+// @Router /user_campaign [post]
 func (h *UserCampaignHandler) HandlerCreate() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		var tempUserCampaign dto.CreateUserCampaignDto
@@ -34,6 +43,13 @@ func (h *UserCampaignHandler) HandlerCreate() gin.HandlerFunc {
 	}
 }
 
+// user_campaign godoc
+// @Summary Get all user_campaign
+// @Tags user_campaign
+// @Produce json
+// @Success 200 {array} domain.UserCampaign
+// @Failure 500 {object} error
+// @Router /user_campaign [get]
 func (h *UserCampaignHandler) HandlerGetAll() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		userCampaignList, err := h.service.GetAllUserCampaigns()
@@ -46,6 +62,14 @@ func (h *UserCampaignHandler) HandlerGetAll() gin.HandlerFunc {
 	}
 }
 
+// user_campaign godoc
+// @Summary Get user_campaign by id
+// @Tags user_campaign
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {array} domain.UserCampaign
+// @Failure 500 {object} error
+// @Router /user_campaign/{id} [get]
 func (h *UserCampaignHandler) HandlerGetById() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -66,6 +90,14 @@ func (h *UserCampaignHandler) HandlerGetById() gin.HandlerFunc {
 	}
 }
 
+// user_campaign godoc
+// @Summary Get user_campaign by campaign id
+// @Tags user_campaign
+// @Produce json
+// @Param id path int true "campaign_id"
+// @Success 200 {array} domain.UserCampaign
+// @Failure 500 {object} error
+// @Router /user_campaign/campaign/{id} [get]
 func (h *UserCampaignHandler) HandlerGetByCampaignId() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -86,6 +118,14 @@ func (h *UserCampaignHandler) HandlerGetByCampaignId() gin.HandlerFunc {
 	}
 }
 
+// user_campaign godoc
+// @Summary Get user_campaign by user id
+// @Tags user_campaign
+// @Produce json
+// @Param id path int true "user_id"
+// @Success 200 {array} domain.UserCampaign
+// @Failure 500 {object} error
+// @Router /user_campaign/user/{id} [get]
 func (h *UserCampaignHandler) HandlerGetByUserId() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
@@ -100,6 +140,14 @@ func (h *UserCampaignHandler) HandlerGetByUserId() gin.HandlerFunc {
 	}
 }
 
+// user_campaign godoc
+// @Summary Delete user_campaign
+// @Tags user_campaign
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {array} string
+// @Failure 500 {object} error
+// @Router /user_campaign/{id} [delete]
 func (h *UserCampaignHandler) HandlerDelete() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		id := ctx.Param("id")
